# BranchManager

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: branch-cleanup.yml  build-deploy.yml
.github/workflows/configs/: branches-config.yml
docs/api/: docs.md
src/branch_manager/: __init__.py  logging.py  main.py  model.py
src/branch_manager/git/: base.py  factory.py
src/branch_manager/git/github/: __init__.py  main.py
tests/: __init__.py  test_git_base.py  test_git_factory.py  test_git_github.py  test_main.py  test_model.py
